# Agrikart---from-harvest-to-handshake

./: Dockerfile  README.md  index.html  package-lock.json  package.json  server.js  tailwind.config.js
backend/: Dockerfile  pyproject.toml
backend/app/: db.py  main.py  models.py
backend/app/core/: security.py
backend/app/routes/: auth.py  chat.py  listings.py  proposals.py  receipts.py
backend/tests/: test_auth.py  test_listings.py
config/: db.js
middlewares/: authMiddleware.js
models/: Listing.js  Proposal.js  User.js
routes/: authRoutes.js  listingRoutes.js  proposalRoutes.js  receiptRoutes.js  uploadRoutes.js
sockets/: chatSocket.js
src/: App.jsx  i18n.jsx  index.css  main.jsx
src/components/: AIChatbot.jsx  Charts.jsx  LandingHeader.jsx  LanguageSwitcher.jsx  NavBar.jsx  ProtectedRoute.jsx  Sidebar.jsx  SimpleTopBar.jsx  ThemedHeader.jsx
src/layouts/: DashboardLayout.jsx  LandingLayout.jsx  RootLayout.jsx
src/pages/: Landing.jsx  Profile.jsx
src/pages/admin/: Profile.jsx  Reports.jsx  Settings.jsx  Users.jsx
src/pages/auth/: Login.jsx  Register.jsx
src/pages/buyer/: Browse.jsx  Chat.jsx  Profile.jsx  Proposals.jsx
src/pages/employee/: Assignments.jsx  AssignmentsTest.jsx  Profile.jsx  QualityCheck.jsx
src/pages/farmer/: CropForm.jsx  CropList.jsx  Dashboard.jsx  Deals.jsx  Profile.jsx  Proposals.jsx
src/services/: firebase.jsx
src/stores/: auth.jsx
utils/: cloudinary.js
