[tool.poetry]
name = "agrikart-backend"
version = "0.1.0"
description = "Agrikart backend (FastAPI)"
authors = ["Agrikart <dev@agrikart.local>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.97.0"
uvicorn = {extras=["standard"], version="^0.21.0"}
sqlmodel = "^0.0.8"
asyncpg = "^0.27.0"
alembic = "^1.11.1"
python-jose = "^3.3.0"
passlib = {extras = ["bcrypt"], version = "^1.7.5"}
databases = "^0.6.0"
httpx = "^0.24.0"
python-multipart = "^0.0.6"
aiofiles = "^23.1.0"
reportlab = "^4.0.0"
redis = "^4.5.1"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"
httpx = "^0.24.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
